[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axle"
version = "3.0.0" 
authors = [
    { name = "Onkar", email = "dahaleonkar@gmail.com" },
]
description = "A CLI tool for generating Git commit messages using AI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "transformers",
    "torch",
    "accelerate",
    "tree-sitter>=0.20.3,<0.23.0",
    "tree-sitter-language-pack",
    "pydantic>=2.0.0"
]

[project.scripts]
axle = "axle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/axle"]