[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axle"
version = "3.3.0"
authors = [
    { name = "Onkar", email = "dahaleonkar@gmail.com" },
]
description = "A CLI tool for generating Git commit messages using AI"
readme = "README.md"
requires-python = ">=3.12.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "transformers",
    "torch",
    "accelerate",
    "tree-sitter",
    "tree-sitter-language-pack",
    "pydantic>=2.0.0"
]

[project.scripts]
axle = "axle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/axle"]
